2012-11-14  Simson Garfinkel  <simsong@npsair.local>

	* src/plugin.cpp (process_sbuf): renamed process_extract to process_sbuf and put it here.

	* src/main.cpp (main): renamed main.cpp to tcpflow.cpp

2012-11-05  Simson Garfinkel  <simsong@npsair.local>

	* src/main.cpp (main): print_usage() renamed usage() for consistency with bulk_extractor
	(usage): usage made static

2012-10-28  Simson Garfinkel  <simsong@npsair.local>

	* src/pcb_timehistogram.cpp: made histograms static

	* src/tcpip.cpp (tcpip::store_packet): debug_level changed to debug in all files.

2012-10-26  Simson Garfinkel  <simsong@npsair.local>

	* src/flow.cpp (flow::print_usage): shortened filename template usage.

	* src/tcpip.cpp (insert): added this function to insert a space at the beginning of a file. Now tcpflow can handle a flow with missing SYNs and out-of-order packets.

2012-10-25  Simson Garfinkel  <simsong@npsair.local>

	* src/tcpip.cpp (tcpip::print_packet): implemented strip-on-fputc

	* src/tcpdemux.cpp (do_strip_nonprint): removed this function, as it could be replaced with strip-on-fputc

2012-10-24  Simson Garfinkel  <simsong@npsair.local>

	* src/tcpdemux.cpp (tcpdemux::open_tcpfile): now asserts that file is not open
	(tcpdemux::open_tcpfile): retrying_fopen changed to retrying_open
	(tcpdemux::process_tcp): completely rewrote the TCP implementation
	(tcpdemux::process_ip4): 

	The old state machine kept tract of each flow's initial sequence
	number (ISN) and computed the absolute 32-bit position within the
	TCP flow for each TCP segment. The problem with this approach is
	that it would not handle segments larger than 4GiB. The new state
	machine computes what it expects the Next Sequence Number (NSN) to
	be based on the previously processed segment in the flow. If there
	is a difference between the actual NSN and the predicted NSN then
	there is a relative seek done in the file.  If I file needs to be
	closed (due to file handle exhaustion) and re-opened (because a